--- a/style.css
+++ b/style.css
@@ -1,11 +1,19 @@
 body{
     box-sizing: border-box;
     padding: 50px;
+    background-color: #ddd;
 }
 .p{
-    background-color: gray;
+    background-color: rgb(189, 181, 181);
+    border: 1px solid rgb(189, 181, 181);
     width: 100%;
+    height: 40px;
+    padding-top: 5px;
+    margin-bottom: 20px;
 }
 .container{
     text-align: center;
+}
+.container-2{
+    background-image:url(https://image.ibb.co/kYJK8x/showcase.jpg) ;
 }
