--- a/style.css
+++ b/style.css
@@ -10,12 +10,18 @@ body{
     height: 40px;
     padding-top: 5px;
     margin-bottom: 20px;
-}
-.container{
     text-align: center;
 }
 .container-2{
     background-image:url(https://image.ibb.co/kYJK8x/showcase.jpg) ;
     color: white;
     height: 70vh;
+}
+.container-3{
+    background-color: rgb(189, 181, 181);
+    border: 1px solid rgb(189, 181, 181);
+    height: 100px;
+    padding-top: 5px;
+    margin-bottom: 20px;
+    text-align: center;
 }
