--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body{
     box-sizing: border-box;
     padding: 50px;
-    background-color: #ddd;
+    background-color: rgb(248, 243, 243);
 }
 .p{
-    background-color: rgb(189, 181, 181);
-    border: 1px solid rgb(189, 181, 181);
+    background-color: #ddd;
+    border: 1px solid #ddd;
     width: 100%;
     height: 40px;
     padding-top: 5px;
@@ -18,8 +18,8 @@ body{
     height: 70vh;
 }
 .container-3{
-    background-color: rgb(189, 181, 181);
-    border: 1px solid rgb(189, 181, 181);
+    background-color: #ddd;
+    border: 1px solid #ddd;
     height: 220px;
     padding-top: 5px;
     margin-bottom: 20px;
