--- a/style.css
+++ b/style.css
@@ -13,9 +13,13 @@ body{
     text-align: center;
 }
 .container-2{
+    position: relative;
     background-image:url(https://image.ibb.co/kYJK8x/showcase.jpg) ;
     color: white;
     height: 70vh;
+    padding: 20px;
+    position: absolute;
+    top: 49%;
 }
 .container-3{
     background-color: #ddd;
