--- a/style.css
+++ b/style.css
@@ -18,8 +18,6 @@ body{
     color: white;
     height: 70vh;
     padding: 20px;
-    position: absolute;
-    top: 49%;
 }
 .container-3{
     background-color: #ddd;
@@ -33,4 +31,8 @@ body{
 }
 .fz{
     font-size: 20px;
+}
+.ab{
+    position: absolute;
+    top: 45%;
 }
