--- a/style.css
+++ b/style.css
@@ -36,3 +36,11 @@ body{
     position: absolute;
     top: 45%;
 }
+.container-4{
+    background-color: #ddd;
+    border: 1px solid #ddd;
+    padding: 20px;
+    text-align: center;
+    font-weight: bolder;
+    margin-bottom: 20px;
+}
