--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     box-sizing: border-box;
     padding: 50px;
-    background-color: rgb(248, 243, 243);
+    background-color: #ccc;
 }
 .p{
     background-color: #ddd;
