--- a/style.css
+++ b/style.css
@@ -48,6 +48,9 @@ body{
     border: 1px solid #ddd;
     padding: 20px;
     margin-bottom: 20px;
-    text-align: center;
     font-weight: bolder;
+}
+.im{
+    max-width: 500px;
+    width: 100%;
 }
