--- a/style.css
+++ b/style.css
@@ -61,7 +61,6 @@ button{
     background-color: #000;
     color: white;
 }
-.btn{
-    background-color: #000;
-    color: white;
+.pp{
+    padding: 20px;
 }
