--- a/style.css
+++ b/style.css
@@ -64,3 +64,11 @@ button{
 .pp{
     padding: 20px;
 }
+.container-6{
+    background-color: #ddd;
+    text-align: center;
+    width: 100%;
+    max-width: 1100px;
+    margin: auto;
+    margin-top: 20px;
+}
